[package]
name = "a32asm"
version = "1.0.0"
edition = "2021"
authors = ["Mathis Rech"]
description = "A32 assembler"
license = "MIT"

[profile.release]
debug = true

[dependencies]
line-span = "0.1"
termcolor = "1.1"
static_assertions = "1.1"
ahash = "0.7"
clap = { version = "3.2", features = ["derive"] }
